crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF069_RUF069.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF069 Context manager does not catch exceptions
  --> RUF069.py:11:5
   |
 9 | def bad1():
10 |     print("start")
11 |     yield  # RUF069
   |     ^^^^^
12 |     print("cleanup")
   |

RUF069 Context manager does not catch exceptions
  --> RUF069.py:18:9
   |
16 | def bad_with_code_after_yield():
17 |     with other_cm():
18 |         yield  # RUF069
   |         ^^^^^
19 |         print("cleanup")
   |

RUF069 Context manager does not catch exceptions
  --> RUF069.py:25:9
   |
23 | def bad_nested_conditional_not_last():
24 |     if condition:
25 |         yield  # RUF069
   |         ^^^^^
26 |     print("after if")
   |

RUF069 Context manager does not catch exceptions
  --> RUF069.py:32:9
   |
30 | def bad_nested_in_loop_not_last():
31 |     for i in range(10):
32 |         yield  # RUF069
   |         ^^^^^
33 |     print("after loop")
   |
