crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF069_RUF069.pyi.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF069 [*] `__all__` contains duplicate entries
  --> RUF069.pyi:19:33
   |
18 | # Bad
19 | __all__: list[str] = ["A", "B", "A"]
   |                                 ^^^
20 | __all__: typing.Any = ("A", "B", "B")
21 | __all__ = ["A", "A", "B"]
   |
help: Remove duplicate entries from `__all__`
16 | __all__.extend(["A", "B"])
17 | 
18 | # Bad
   - __all__: list[str] = ["A", "B", "A"]
19 + __all__: list[str] = ["A", "B"]
20 | __all__: typing.Any = ("A", "B", "B")
21 | __all__ = ["A", "A", "B"]
22 | __all__ = ["A", "B", "A"]

RUF069 [*] `__all__` contains duplicate entries
  --> RUF069.pyi:20:34
   |
18 | # Bad
19 | __all__: list[str] = ["A", "B", "A"]
20 | __all__: typing.Any = ("A", "B", "B")
   |                                  ^^^
21 | __all__ = ["A", "A", "B"]
22 | __all__ = ["A", "B", "A"]
   |
help: Remove duplicate entries from `__all__`
17 | 
18 | # Bad
19 | __all__: list[str] = ["A", "B", "A"]
   - __all__: typing.Any = ("A", "B", "B")
20 + __all__: typing.Any = ("A", "B")
21 | __all__ = ["A", "A", "B"]
22 | __all__ = ["A", "B", "A"]
23 | __all__ = ["A", "A", "B", "B"]

RUF069 [*] `__all__` contains duplicate entries
  --> RUF069.pyi:21:17
   |
19 | __all__: list[str] = ["A", "B", "A"]
20 | __all__: typing.Any = ("A", "B", "B")
21 | __all__ = ["A", "A", "B"]
   |                 ^^^
22 | __all__ = ["A", "B", "A"]
23 | __all__ = ["A", "A", "B", "B"]
   |
help: Remove duplicate entries from `__all__`
18 | # Bad
19 | __all__: list[str] = ["A", "B", "A"]
20 | __all__: typing.Any = ("A", "B", "B")
   - __all__ = ["A", "A", "B"]
21 + __all__ = ["A", "B"]
22 | __all__ = ["A", "B", "A"]
23 | __all__ = ["A", "A", "B", "B"]
24 | __all__ += ["B", "B"]

RUF069 [*] `__all__` contains duplicate entries
  --> RUF069.pyi:22:22
   |
20 | __all__: typing.Any = ("A", "B", "B")
21 | __all__ = ["A", "A", "B"]
22 | __all__ = ["A", "B", "A"]
   |                      ^^^
23 | __all__ = ["A", "A", "B", "B"]
24 | __all__ += ["B", "B"]
   |
help: Remove duplicate entries from `__all__`
19 | __all__: list[str] = ["A", "B", "A"]
20 | __all__: typing.Any = ("A", "B", "B")
21 | __all__ = ["A", "A", "B"]
   - __all__ = ["A", "B", "A"]
22 + __all__ = ["A", "B"]
23 | __all__ = ["A", "A", "B", "B"]
24 | __all__ += ["B", "B"]
25 | __all__.extend(["B", "B"])

RUF069 [*] `__all__` contains duplicate entries
  --> RUF069.pyi:23:17
   |
21 | __all__ = ["A", "A", "B"]
22 | __all__ = ["A", "B", "A"]
23 | __all__ = ["A", "A", "B", "B"]
   |                 ^^^
24 | __all__ += ["B", "B"]
25 | __all__.extend(["B", "B"])
   |
help: Remove duplicate entries from `__all__`
20 | __all__: typing.Any = ("A", "B", "B")
21 | __all__ = ["A", "A", "B"]
22 | __all__ = ["A", "B", "A"]
   - __all__ = ["A", "A", "B", "B"]
23 + __all__ = ["A", "B", "B"]
24 | __all__ += ["B", "B"]
25 | __all__.extend(["B", "B"])
26 | 

RUF069 [*] `__all__` contains duplicate entries
  --> RUF069.pyi:23:27
   |
21 | __all__ = ["A", "A", "B"]
22 | __all__ = ["A", "B", "A"]
23 | __all__ = ["A", "A", "B", "B"]
   |                           ^^^
24 | __all__ += ["B", "B"]
25 | __all__.extend(["B", "B"])
   |
help: Remove duplicate entries from `__all__`
20 | __all__: typing.Any = ("A", "B", "B")
21 | __all__ = ["A", "A", "B"]
22 | __all__ = ["A", "B", "A"]
   - __all__ = ["A", "A", "B", "B"]
23 + __all__ = ["A", "A", "B"]
24 | __all__ += ["B", "B"]
25 | __all__.extend(["B", "B"])
26 | 

RUF069 [*] `__all__` contains duplicate entries
  --> RUF069.pyi:24:18
   |
22 | __all__ = ["A", "B", "A"]
23 | __all__ = ["A", "A", "B", "B"]
24 | __all__ += ["B", "B"]
   |                  ^^^
25 | __all__.extend(["B", "B"])
   |
help: Remove duplicate entries from `__all__`
21 | __all__ = ["A", "A", "B"]
22 | __all__ = ["A", "B", "A"]
23 | __all__ = ["A", "A", "B", "B"]
   - __all__ += ["B", "B"]
24 + __all__ += ["B"]
25 | __all__.extend(["B", "B"])
26 | 
27 | # Bad, unsafe

RUF069 [*] `__all__` contains duplicate entries
  --> RUF069.pyi:25:22
   |
23 | __all__ = ["A", "A", "B", "B"]
24 | __all__ += ["B", "B"]
25 | __all__.extend(["B", "B"])
   |                      ^^^
26 |
27 | # Bad, unsafe
   |
help: Remove duplicate entries from `__all__`
22 | __all__ = ["A", "B", "A"]
23 | __all__ = ["A", "A", "B", "B"]
24 | __all__ += ["B", "B"]
   - __all__.extend(["B", "B"])
25 + __all__.extend(["B"])
26 | 
27 | # Bad, unsafe
28 | __all__ = [

RUF069 [*] `__all__` contains duplicate entries
  --> RUF069.pyi:30:5
   |
28 | __all__ = [
29 |     "A",
30 |     "A",
   |     ^^^
31 |     "B",
32 |     # Comment
   |
help: Remove duplicate entries from `__all__`
27 | # Bad, unsafe
28 | __all__ = [
29 |     "A",
   -     "A",
30 |     "B",
31 |     # Comment
32 |     "B",

RUF069 [*] `__all__` contains duplicate entries
  --> RUF069.pyi:33:5
   |
31 |     "B",
32 |     # Comment
33 |     "B",
   |     ^^^
34 | ]
   |
help: Remove duplicate entries from `__all__`
29 |     "A",
30 |     "A",
31 |     "B",
   -     # Comment
   -     "B",
32 +     # Comment,
33 | ]
note: This is an unsafe fix and may change runtime behavior
