crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF075_RUF075.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF075 Context manager does not catch exceptions
  --> RUF075.py:11:5
   |
 9 | def bad1():
10 |     print("start")
11 |     yield  # RUF075
   |     ^^^^^
12 |     print("cleanup")
   |

RUF075 Context manager does not catch exceptions
  --> RUF075.py:18:9
   |
16 | def bad_with_code_after_yield():
17 |     with other_cm():
18 |         yield  # RUF075
   |         ^^^^^
19 |         print("cleanup")
   |

RUF075 Context manager does not catch exceptions
  --> RUF075.py:25:9
   |
23 | def bad_nested_conditional_not_last():
24 |     if condition:
25 |         yield  # RUF075
   |         ^^^^^
26 |     print("after if")
   |

RUF075 Context manager does not catch exceptions
  --> RUF075.py:32:9
   |
30 | def bad_nested_in_loop_not_last():
31 |     for i in range(10):
32 |         yield  # RUF075
   |         ^^^^^
33 |     print("after loop")
   |

RUF075 Context manager does not catch exceptions
  --> RUF075.py:39:9
   |
37 | def bad_nested_in_while_not_last():
38 |     while condition:
39 |         yield  # RUF075
   |         ^^^^^
40 |     print("after while")
   |

RUF075 Context manager does not catch exceptions
  --> RUF075.py:48:9
   |
46 |         pass
47 |     elif condition2:
48 |         yield  # RUF075
   |         ^^^^^
49 |     print("after if")
   |

RUF075 Context manager does not catch exceptions
  --> RUF075.py:56:13
   |
54 |     match x:
55 |         case 1:
56 |             yield  # RUF075
   |             ^^^^^
57 |     print("after match")
   |

RUF075 Context manager does not catch exceptions
   --> RUF075.py:358:21
    |
356 | @contextmanager
357 | def bad_yield_in_with_items():
358 |     with some_call((yield)):  # RUF075
    |                     ^^^^^
359 |         pass
360 |     print("cleanup")
    |
