crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF105_RUF105.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF105 Importing type/function `Path` from module `pathlib`.
 --> RUF105.py:6:21
  |
5 | # import type, not ok
6 | from pathlib import Path
  |                     ^^^^
7 | path = Path('/')
  |

RUF105 Importing type/function `dup` from module `os`.
  --> RUF105.py:10:22
   |
 9 | # import module, function
10 | from os import path, dup
   |                      ^^^
11 | cwd = path.cwd()
12 | fd = dup(0)
   |
